static/custom/pad.css
/*
  You may have to use !important to override css attributs, for example:
  
  * {color: blue !important;}
*/

#editbar {
  width: 490px;
  border: 1px solid #ccc;
  border-color: #ddd #ddd #ccc;
  padding: 3px 4px;
  height: 28px;
}

#editbar ul {
  margin: 0;
}

#editbar ul li {
  background: none;
  border: none;
  padding: 4px 1px;
}

#editbar ul .select {
  margin-right: 5px;
}

#editbar ul .editor-button-text {
  color: #666666;
  font-size: 10px;
  padding-top: 7px;
  width: auto;
}

#editbar ul li.separator {
  visibility: visible;
  width: 0;
  border-left: 1px solid #ccc;
  border-right: 1px solid #fff;
  margin: 4px 6px;
  height: 18px;
  padding: 0;
}

#editbar ul li:hover {
  background: none;
}

#editbar ul li a span {
  position: static;
}

#editorcontainerbox {
  position: relative;
  height: 400px;
}

#editorcontainer {
  border: 1px solid #ddd;
  border-top: 0;
  width: 498px;
  top: 0;
}

#innerdocbody h1 {
  line-height: 28px;
}

#innerdocbody h2 {
  line-height: 22px;
}

#innerdocbody h3 {
  line-height: 19px;
}

#innerdocbody a {
  color: #01317E;
}

.yj-page-link {
  border: dotted 1px #777;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

.yj-editor-submit-wrap {
  text-align: right;
  margin: 15px 0 4px;
}

.yj-editor-lightbox-field {
  width: 365px;
  margin-left: 5px;
  float: right;
  padding: 5px
}

.yj-editor-lightbox-field-wrap {
  margin: 5px 0 10px;
}

.yj-editor-lightbox-label {
  line-height: 18px;
}

.yj-mention-field {
  width: 470px;
}

